src/test/InvalidVariadic/InvalidVariadic.panda
method badVariadic(a:Int..., b:Int) {
}