src/test/InvalidVariadic/InvalidVariadic.expected
error: InvalidVariadic.panda:1:20: only the last parameter of a method may accept a variable number of arguments
1 error
